# TIC-DEVC

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  snake_x86_64-Linux
Headers/: common.h  draw.h  file.h  game.h  interface.h  map.h  memory.h  player.h  spawners.h  window.h
Headers/chain/: file.h  pile.h
Headers/helpers/: conversion.h  covnersion.h  file.h  print.h  random.h  string.h  type.h
Headers/initiator/: file.h  generate.h
Headers/structures/: game.h  geometry.h  interface.h  map.h  player.h  sdl.h  type.h
Objects/: file.d  game.d  main.d  pile.d  player.d  print.d  string.d  type.d
Objects/chain/: file.d  pile.d
Ressources/: map.txt
Sources/: draw.c  file.c  game.c  interface.c  main.c  map.c  memory.c  pile.c  player.c  print.c  spawners.c  string.c  type.c  window.c
Sources/Headers/: file.h  game.h  main.h
Sources/chain/: file.c  pile.c
Sources/helpers/: conversion.c  file.c  print.c  random.c  string.c  type.c
Sources/initiator/: file.c  generate.c
Sources/memory/: game.c  map.c  player.c  sdl.c
TestsSdl/: DemiReadme.txt  test2.c
src/: file.c  game.c  helper.c  input.c  main.c  pile.c  player.c
src/Headers/: common.h  game.h  helper.h  input.h  main.h  pile.h  player.h
